
ClanSphere 2010.1 >> 2010-11-XX
___________________________________________________________

-> Added class "noexpand" for textareas to exclude them from the autoexpander (x-ray)
-> Added domain based blocklist to most email forms to reduce the usage of trashmail addresses (fr33z3m4n, hajo)
-> Added field for registration email that is not changeable later on (fr33z3m4n)
-> Added function cs_subtemplate_check to look for the existance and path of theme files (hajo)
-> Added search functionality for eventguest entries (hajo)
-> Changed behavior of cs_cache_save a bit for more simple usage (hajo)
-> Fixed ajax with underscores in filenames, due to this hyphens are no longer allowed in them (schiri)
-> Fixed error page on too old php versions by using a fallback file (hajo)
-> Fixed linkus image url to work again (hajo)
-> Updated CKEditor to 3.4.2 (hajo)
-> Updated jQuery to 1.4.3 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.0 >> 2010-08-27
___________________________________________________________

-> Added email login feature (fr33z3m4n)
-> Added new optional template placeholders func:stylesheet and func:javascript (hajo)
   They contain additional link and script tags for the html output
   By default stylesheets are added to end of head and javascripts to end of body
-> Added page separation to cache info site since there could be many files now (hajo)
-> Added cs_url_self function for url sharing with two example template placeholders (hajo)
   {ajax:navaddthis} for addthis.com and {ajax:navbookmark} for simple bookmarking and url checks
-> Added support for data memcache storage using apc or xcache php extension
    Can be enabled inside setup.php by adding e.g. $cs_main['cache_mode'] = 'apc';
-> Reworked mod count (astmaih)
-> Reworked mod servers (fr33z3m4n)
-> Updated CKEditor to 3.4.0 (hajo)

-- Fixed alot of bugs that were reported at "Trac" --


ClanSphere 2010.0 RC 2 Patch 2 >> 2010-07-30